# WHT_PRF

./: .gitignore  README.md  copy_inp_files.py  extract.py  keys.txt  pyproject.toml  regions.txt  step11_rate_100.env  step11_rate_100.inp  step11_relax_0050.env  step11_relax_0050.inp  step11_relax_0075.env  step11_relax_0075.inp  step11_relax_0100.env  step11_relax_0100.inp  step11_relax_0150.env  step11_relax_0150.inp  test_prony.env  test_prony.inp  test_prony_val.inp  test_prony_val_extracted.txt
.agents/: AGENTS.md
benchmark_abaqus/: abaqus_reader.py  debug.npz  extract_odb.py  generate_benchmarks.py  generate_jax_report.py  generate_report.py  plot_all_results.py  run_REP_viscnet_c3d8_nh_n3.py  run_REP_viscnet_cpe4_nh_n2.py  run_all_abaqus.py  run_all_jax_benchmarks.py  run_valid_benchmarks.py  run_viscnet_c3d8_nh_n2.py  run_viscnet_c3d8_nh_n2_debug.py  run_viscnet_c3d8_nh_n3.py  run_viscnet_c3d8h_ab_bb_n2.py  run_viscnet_c3d8h_ab_bb_n2_user.py  run_viscnet_c3d8h_ab_bb_n3.py  run_viscnet_c3d8h_ab_bb_n3_user.py  run_viscnet_c3d8h_ab_n2.py  run_viscnet_c3d8h_ab_n3.py  run_viscnet_c3d8h_ogden_n2.py  run_viscnet_c3d8h_vanwaals_n2.py  run_viscnet_c3d8r_nh_n2.py  run_viscnet_c3d8rh_ab_n2.py  run_viscnet_c3d8rh_ogden_n2.py  run_viscnet_c3d8rh_vanwaals_n2.py  run_viscnet_cax4_nh_n2.py  run_viscnet_cax4h_ab_n2.py  run_viscnet_cax4h_ogden_bb_n2.py  run_viscnet_cax4h_ogden_n2.py  run_viscnet_cax4h_vanwaals_bb_n2.py  run_viscnet_cax4h_vanwaals_bb_n3.py  run_viscnet_cax4h_vanwaals_n2.py  run_viscnet_cax4r_nh_n2.py  run_viscnet_cax4rh_ab_n2.py  run_viscnet_cax4rh_ogden_n2.py  (+260 more)
(+157 files in other folders)
